sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:15: error: 'while' expected but 'for' found.
    for (i<- fin to debut by (-1)) {
    ^AlgCocktailSort3:19: error: '(' expected but ';' found.
    debut+=1
^AlgCocktailSort3:24: error: illegal start of simple expression
} 
^AlgCocktailSort3:26: error: Unmatched closing brace '}' ignored here
}
^